Fix horizontal spacing of !ColorPalette cells.  Problem was that the width: 20px isn't obeyed on IE/quirks when the !ColorPalette is inside a !TooltipDialog.  Fixes #11358.
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@22390 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -1058,7 +1058,10 @@ img.dijitColorPaletteUnder {
 	height: 14px;
 	border: 1px solid #999;
 	cursor: default;
-		vertical-align: middle;
+	vertical-align: middle;
+}
+.dj_iequirks .dijitColorPalette .dijitPaletteImg {
+	margin: 1px;	/* needed to fix spacing for ColorPalette in TooltipDialog on IE/quirks */
 }
 .dijitPaletteTable td {
 		padding: 0px;
@@ -1082,10 +1085,6 @@ img.dijitColorPaletteUnder {
 .dj_gecko .dijit_a11y .dijitColorPalette .dijitPaletteCellFocused .dijitPaletteImg {
 	border: 3px dotted #000;	/* focus border on table cells broken in FF high contrast :-( */
 	margin: -1px;
-}
-
-.dijit_a11y  .dijitColorPalette .dijitPaletteCellHover .dijitPaletteImg {
-	border: 2px solid #000 !important;
 }
 
 /* AccordionContainer */
